--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     rel="stylesheet"
     href="https://fonts.googleapis.com/icon?family=Material+Icons"
   />  
-    <title>My practice</title>
+    <title>Patient Management System</title>
   </head>
   <body>
     <div id="root"></div>
